--- a/WindowsFormsApplication2/IFCViewer.csproj
+++ b/WindowsFormsApplication2/IFCViewer.csproj
@@ -91,10 +91,6 @@
     <Reference Include="SharpGL.WinForms">
       <HintPath>D:\이석우 백업\업무\SharpGL\YT.SGL.Viewer\YT.SGL.TEST_SW\SharpGL DLL\SharpGL.WinForms.dll</HintPath>
     </Reference>
-    <Reference Include="SharpGLSub">
-      <HintPath>D:\이석우 백업\연구\SharpGl\SharpGL-master\SharpGL\bin\Debug\SharpGLSub.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
@@ -121,6 +117,7 @@
     </Compile>
     <Compile Include="IfcEngine.cs" />
     <Compile Include="IFCViewerWrapper.cs" />
+    <Compile Include="VectorOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scene.cs" />
